@@ -54,11 +54,6 @@
             <artifactId>fluss-flink-1.20</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.fluss</groupId>
-            <artifactId>fluss-client</artifactId>
-        </dependency>
-
         <!-- Test -->
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
@@ -72,6 +67,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-runtime</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -84,22 +84,6 @@
                         <arg>-Xlint:-module</arg>
                         <arg>--add-reads</arg>
                         <arg>io.github.sekelenao.flinkboot.fluss=ALL-UNNAMED</arg>
-                        <!--
-                            Fluss JARs (fluss-flink-1.20, fluss-client) are fat-JARs that embed
-                            commons-lang3's module-info.class. Java resolves them as the named module
-                            'org.apache.commons.lang3', which does not export the Fluss packages.
-                            These exports make each used Fluss package accessible to our module.
-                        -->
-                        <arg>--add-exports</arg>
-                        <arg>org.apache.commons.lang3/org.apache.fluss.config=io.github.sekelenao.flinkboot.fluss</arg>
-                        <arg>--add-exports</arg>
-                        <arg>org.apache.commons.lang3/org.apache.fluss.flink.sink=io.github.sekelenao.flinkboot.fluss</arg>
-                        <arg>--add-exports</arg>
-                        <arg>org.apache.commons.lang3/org.apache.fluss.flink.sink.serializer=io.github.sekelenao.flinkboot.fluss</arg>
-                        <arg>--add-exports</arg>
-                        <arg>org.apache.commons.lang3/org.apache.fluss.flink.source=io.github.sekelenao.flinkboot.fluss</arg>
-                        <arg>--add-exports</arg>
-                        <arg>org.apache.commons.lang3/org.apache.fluss.flink.source.deserializer=io.github.sekelenao.flinkboot.fluss</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
